fix card overflow add load tasks data after task add

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -126,7 +126,7 @@ body {
   width: 100%;
   min-height: 10vh;
   max-height: 40vh;
-  overflow-y: scroll;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
   padding: 5px;
